fixed tout sections clipping videos

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -208,6 +208,7 @@ div.ul-container {
     background-color: rgb(228, 228, 228);
     border-radius: 4px;
     margin-top:15px;
+    min-height:250px;
     width:300px;
     overflow-x:scroll;
     overflow-y:hidden;
@@ -225,7 +226,7 @@ div.ul-container h3 {
     padding-left:8px;
     overflow-x:scroll;
     overflow-y:hidden;
-    height:140px;
+    height:190px;
     width:670px;
 }
 .touts-section .tout-in-section {
@@ -243,6 +244,9 @@ div div.clear {
 /* overriding video.js */
 .video-js .vjs-tech {
     position:static;
+}
+.touts-section .video-js .vjs-tech {
+	height:170px;
 }
 img.vjs-poster {
     display:none;
